# ros2-websocket-proxy

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build_and_test.yml
config/: client_topics.yaml  server_topics.yaml  test_client_topics.yaml  test_server_topics.yaml  topics.yaml
launch/: websocket_client.launch.py  websocket_server.launch.py  websocket_server_container.launch.py
scripts/: install_dependency.sh
src/: client.cpp  server.cpp
test/: test_cross_domain.sh
