<?xml version="1.0"?>
<package format="3">
  <name>ros2_websocket_proxy</name>
  <version>0.1.0</version>
  <description>Generalized ROS 2 Pub/Sub with WebSocket communication</description>
  <maintainer email="tatsuyai713@gmail.com">Tatsuya Ishikawa</maintainer>
  <license>MIT License</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>websocketpp</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>websocketpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
